Cobbler CHANGELOG
(all entries mdehaan@redhat.com unless noted otherwise)

- ??? - 1.1.1
- make template replacement use regex module

- ??? - 1.1.0
- devel branch
- added cobbler aclsetup command for running cobbler as non-root
- added cobbler find command to do searches from the command line
- fix mkdir invocation
- improved cobbler replicate, it now can rsync needed files
- further templatize ISC dhcp config file (pay attention to /etc/cobbler/dhcp.template.rpmnew !)
- fix for NFS imported URLs during kickstart generation
- added yumreposync_flags to settings, default "-l" for use plugins
- added an extra mkdir for rhn's reposync, though I believe the -l cures it already
- allow mod python bits to work via non-80 http ports
- when mirroring repos, act as 686 not 386 to get all the kernel updates
- upgrades to cobbler buildiso
- added patch to allow --in-place editing of ksmeta/kopts
- added patch to allow multiple duplicate kernel options
- fix kickstart serving when the tree is on NFS
- s390x import, added support for s390x "pseudo-PXE" trees
- added support for tracking image objects and virtual ISO images
- support for multiple copies of the same kernel option in kopts
- add cobbler bash completion script
- fix bug with 255 kernel options line warning not firing soon enough
- add findks.cgi support back as http://server/cblr/svc/op/findks
- merge patch to surface status over API
- make yum repos served up for /etc/yum.repos.d fully dynamic (mod_python)
- cobbler find API calls and command line usage can now use fnmatch (wildcards)
- return code cleanup (0/1 now more predictable)
- added comments to /etc/cobbler/modules.conf
- during import non-xen kernels will default --virt-type to qemu
- when editing/adding profiles, auto-rebuild the PXE menu
- added http://cobbler.example.org/cblr/svc/op/list/what/systems (or profiles, etc)
- in the webui, only show compatible repos when editing a profile
- refresh cobblerd cache before adding objects